<resources>
    <string name="app_name">MontyHall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">The Monty Hall Problem</string>
    <string name="new_game">New Game</string>
    <string name="cont_game">Continue</string>
    <string name="about">About</string>
    <string name="about_text">This is St. Lawrence University CS450 implementation of the Monty Hall Game.</string>
    <string name="about_title_text">About the Monty Hall Problem</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_door">Choose a door</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="total">Total</string>
    <string name="door_switch">Would you like to switch doors?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_to_play_again">Click to play again</string>
</resources>
