<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment"
    android:gravity="center_vertical|center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/wins"
                android:gravity="center_vertical|center_horizontal"/>

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/loss"
                android:gravity="center_vertical|center_horizontal"/>

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/total"
                android:gravity="center_vertical|center_horizontal"/>

            <TextView android:layout_column="1"
                android:layout_row="0"
                android:id="@+id/win_total"
                android:text="\t0"
                android:gravity="center_vertical|center_horizontal"/>

            <TextView android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/loss_total"
                android:text="\t0"
                android:gravity="center_vertical|center_horizontal"/>

            <TextView android:layout_column="1"
                android:layout_row="2"
                android:id="@+id/game_total"
                android:text="\t0"
                android:gravity="center_vertical|center_horizontal"/>

            <!--finish grid layout-->
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_door"
            android:id="@+id/prompt"
            android:textSize="26sp"
            android:gravity="center_vertical|center_horizontal"/>


        <include layout="@layout/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/switch_layout"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/door_switch"
                android:textSize="26dp"
                android:gravity="center_vertical|center_horizontal"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/yes"
                    android:id="@+id/yesChange"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="4dp"
                    android:padding="10dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/no"
                    android:id="@+id/noChange"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="4dp"
                    android:padding="10dp"
                    />


            </GridLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/play_again_layout"
            android:gravity="center_vertical|center_horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_play_again"
                    android:id="@+id/play_again"
                    android:gravity="center_vertical|center_horizontal"
                    />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>